// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`anchor renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  position: relative;
}

.c2 {
  position: relative;
  display: block;
}

.c3 {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c4 {
  position: absolute;
  top: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c5 {
  position: absolute;
  top: 50%;
  left: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c6 {
  position: absolute;
  bottom: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c7 {
  position: absolute;
  top: 50%;
  right: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c8 {
  position: absolute;
  top: 0;
  left: 0;
}

.c9 {
  position: absolute;
  bottom: 0;
  left: 0;
}

.c10 {
  position: absolute;
  top: 0;
  right: 0;
}

.c11 {
  position: absolute;
  bottom: 0;
  right: 0;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div>
        first
      </div>
    </div>
    <div
      className="c3"
    >
      <div>
        second
      </div>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div>
        first
      </div>
    </div>
    <div
      className="c4"
    >
      <div>
        second
      </div>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div>
        first
      </div>
    </div>
    <div
      className="c5"
    >
      <div>
        second
      </div>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div>
        first
      </div>
    </div>
    <div
      className="c6"
    >
      <div>
        second
      </div>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div>
        first
      </div>
    </div>
    <div
      className="c7"
    >
      <div>
        second
      </div>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div>
        first
      </div>
    </div>
    <div
      className="c8"
    >
      <div>
        second
      </div>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div>
        first
      </div>
    </div>
    <div
      className="c9"
    >
      <div>
        second
      </div>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div>
        first
      </div>
    </div>
    <div
      className="c10"
    >
      <div>
        second
      </div>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div>
        first
      </div>
    </div>
    <div
      className="c11"
    >
      <div>
        second
      </div>
    </div>
  </div>
</div>
`;

exports[`fill renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  position: relative;
  width: 100%;
  height: 100%;
  max-width: none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  position: relative;
}

.c2 {
  position: relative;
  display: block;
  width: 100%;
  height: 100%;
}

.c3 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

.c5 {
  position: relative;
  display: block;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div>
        first
      </div>
    </div>
    <div
      className="c3"
    >
      <div>
        second
      </div>
    </div>
  </div>
  <div
    className="c4"
  >
    <div
      className="c5"
    >
      <div>
        first
      </div>
    </div>
    <div
      className="c3"
    >
      <div>
        second
      </div>
    </div>
  </div>
</div>
`;

exports[`guidingChild renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  position: relative;
}

.c2 {
  position: relative;
  display: block;
}

.c3 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div>
        first
      </div>
    </div>
    <div
      className="c3"
    >
      <div>
        second
      </div>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c3"
    >
      <div>
        first
      </div>
    </div>
    <div
      className="c2"
    >
      <div>
        second
      </div>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div>
        first
      </div>
    </div>
    <div
      className="c3"
    >
      <div>
        second
      </div>
    </div>
  </div>
</div>
`;

exports[`interactiveChild renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  position: relative;
}

.c2 {
  position: relative;
  display: block;
}

.c3 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  pointer-events: none;
}

.c4 {
  position: relative;
  display: block;
  pointer-events: none;
}

.c5 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div>
        first
      </div>
    </div>
    <div
      className="c3"
    >
      <div>
        second
      </div>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c4"
    >
      <div>
        first
      </div>
    </div>
    <div
      className="c5"
    >
      <div>
        second
      </div>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div>
        first
      </div>
    </div>
    <div
      className="c3"
    >
      <div>
        second
      </div>
    </div>
  </div>
</div>
`;

exports[`renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  position: relative;
}

.c2 {
  position: relative;
  display: block;
}

.c3 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div>
        first
      </div>
    </div>
    <div
      className="c3"
    >
      <div>
        second
      </div>
    </div>
  </div>
</div>
`;
